# builtin_commands

./: .gitignore  Cargo.toml  Makefile  README.md  armv6_builtin_commands  armv7_builtin_commands  fomos.sh  x86_builtin_commands
Documentation/: commands.txt
asku/: Cargo.toml  build.rs
asku/src/: lib.rs  password.c
editfile/: Cargo.toml  build.rs
editfile/src/: editfile.c  lib.rs
examples/: asku.rs  help.rs  print.rs  shutdown.rs
help/: Cargo.toml
help/src/: asku.rs  help.rs  lib.rs  print.rs  shutdown.rs
makefile/: Cargo.toml  build.rs
makefile/src/: lib.rs  makefile.c
print/: .gitignore  Cargo.toml  Makefile  armv6_print  armv7_print  config.json  print  x86_print
print/print/: Cargo.toml
print/print/src/: lib.rs
print/src/: lang.rs  lib.rs  main.c
shutdown/: Cargo.toml  build.rs
shutdown/src/: lib.rs  shutdown.c
src/: lib.rs
