[package]
name = "builtin_commands"
version = "0.1.0"
authors = ["The sbFomos developers"]
edition = "2018"

[workspace]
members = [
    "print/",
    "asku/",
    "shutdown/",
    "help/",
]

[dependencies]
print = { path = "print/" }
asku = { path = "asku/" }
shutdown = { path = "shutdown/" }
help = { path = "help/" }
