[package]
name = "builtin_commands"
version = "0.1.0"
authors = ["The sbFomos developers"]
edition = "2018"

[workspace]
members = [
    "print/",
    "asku/",
    "shutdown/",
    "makefile/",
    "editfile/",
]

[dependencies]
print = { path = "print/" }
asku = { path = "asku/" }
shutdown = { path = "shutdown/" }
makefile = { path = "makefile/" }
editfile = { path = "editfile/" }
